# jaguar

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  test_api.py
demo/: nuxt.config.ts  package.json  pnpm-lock.yaml
demo/app/: app.config.ts  app.vue
demo/app/assets/: main.css
demo/app/pages/: chat.vue  index.vue  search.vue  upload.vue
demo/server/api/: chat.post.ts
